test/spec_vectors/simd_f64x2_arith/ok/module_18.wat
(module (func (export "add-sub") (param v128 v128 v128) (result v128) (f64x2.add (f64x2.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "div-add") (param v128 v128 v128) (result v128) (f64x2.div (f64x2.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "div-mul") (param v128 v128 v128) (result v128) (f64x2.div (f64x2.mul (local.get 0) (local.get 1)) (local.get 2))) (func (export "div-sub") (param v128 v128 v128) (result v128) (f64x2.div (f64x2.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-add") (param v128 v128 v128) (result v128) (f64x2.mul (f64x2.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-div") (param v128 v128 v128) (result v128) (f64x2.mul (f64x2.div (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-sub") (param v128 v128 v128) (result v128) (f64x2.mul (f64x2.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "sub-add") (param v128 v128 v128) (result v128) (f64x2.sub (f64x2.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "add-neg") (param v128 v128) (result v128) (f64x2.add (f64x2.neg (local.get 0)) (local.get 1))) (func (export "add-sqrt") (param v128 v128) (result v128) (f64x2.add (f64x2.sqrt (local.get 0)) (local.get 1))) (func (export "div-neg") (param v128 v128) (result v128) (f64x2.div (f64x2.neg (local.get 0)) (local.get 1))) (func (export "div-sqrt") (param v128 v128) (result v128) (f64x2.div (f64x2.sqrt (local.get 0)) (local.get 1))) (func (export "mul-neg") (param v128 v128) (result v128) (f64x2.mul (f64x2.neg (local.get 0)) (local.get 1))) (func (export "mul-sqrt") (param v128 v128) (result v128) (f64x2.mul (f64x2.sqrt (local.get 0)) (local.get 1))) (func (export "sub-neg") (param v128 v128) (result v128) (f64x2.sub (f64x2.neg (local.get 0)) (local.get 1))) (func (export "sub-sqrt") (param v128 v128) (result v128) (f64x2.sub (f64x2.sqrt (local.get 0)) (local.get 1))))